@@ -1,4 +1,4 @@
-﻿// Helpers - Automaticly generated methods for MediaInfo
+// Helpers - Automaticly generated methods for MediaInfo
 // Copyright (C) 2005-2007 Jerome Martinez, Zen@MediaArea.net
 //
 // This library is free software; you can redistribute it and/or
@@ -1681,8 +1681,8 @@ void File__Base_Codec (ZtringListList &Info)
     "A_MPEG/L1;MPEG1/2 L1;Mk;A;MPEG-A;;MPEG1 or 2 Audio layer 1;http://www.iis.fraunhofer.de/amm/index.html\n"
     "A_MPEG/L2;MPEG1/2 L2;Mk;A;MPEG-A;;MPEG1 or 2 Audio layer 2;http://www.iis.fraunhofer.de/amm/index.html\n"
     "A_MPEG/L3;MPEG1/2 L3;Mk;A;MPEG-A;;MPEG1 or 2 Audio Layer 3;http://www.iis.fraunhofer.de/amm/index.html\n"
-    "A_PCM/INT/BIG;PCM;Mk;A\n"
-    "A_PCM/INT/LIT;PCM;Mk;A\n"
+    "A_PCM/INT/BIG;PCM (Big unsigned);Mk;A;PCM;;Linear PCM (Big Endian)\n"
+    "A_PCM/INT/LIT;PCM (Little unsigned);Mk;A;PCM;;Linear PCM (Little Endian)\n"
     "A_PCM/FLOAT/IEEE;FLOAT;Mk;A;;;Microsoft FLOAT;http://www.microsoft.com/windows/\n"
     "A_AC3;AC3;Mk;A;AC3;;Dolby AC3\n"
     "A_AC3/BSID9;AC3;Mk;A;AC3;;Dolby AC3\n"
@@ -1736,17 +1736,17 @@ void File__Base_Codec (ZtringListList &Info)
     "enca;Encrypted;4CC;A;;;Encrypted Audio (3GPP);http://www.apple.com/quicktime/download/standalone.html\n"
     "enct;Encrypted;4CC;T;;;Encrypted Text (3GPP);http://www.apple.com/quicktime/download/standalone.html\n"
     "ima4;IMA ADPCM;4CC;A;ADPCM;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "raw ;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "twos;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "sowt;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "raw ;PCM (Little unsigned);4CC;A;PCM;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "twos;PCM (Big signed);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "sowt;PCM (Little signed);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
     "alac;Lossless;4CC;A;;;Apple Lossless Format (similar to FLAC);http://www.apple.com/quicktime/download/standalone.html\n"
-    "sac3;AC3;4CC;A;;;AC3 in MP4 (made in Nero);http://www.nerodigital.com\n"
-    "in24;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "in32;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "fl32;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "fl64;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "alaw;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
-    "ulaw;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "sac3;AC3;4CC;A;AC3;;AC3 in MP4 (made in Nero);http://www.nerodigital.com\n"
+    "in24;PCM (Big unsigned);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "in32;PCM (Big unsigned);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "fl32;PCM (Float);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "fl64;PCM (Float);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "alaw;A-law;4CC;A;A-law;;;http://www.apple.com/quicktime/download/standalone.html\n"
+    "ulaw;U-Law;4CC;A;U-Law;;;http://www.apple.com/quicktime/download/standalone.html\n"
     ".mp3;MPEG-1/2 L3;2CC;A;MPEG-A;;MPEG-1 or 2 layer 3;http://www.iis.fraunhofer.de/amm/index.html\n"
     "MPEG-4 AAC main;AAC Main;Mp4v2;A;AAC\n"
     "MPEG-4 AAC LC;AAC LC;Mp4v2;A;AAC\n"
@@ -1773,13 +1773,13 @@ void File__Base_Codec (ZtringListList &Info)
     "Vodei;Vodei MP;MediaInfo;V;;;Video On Demand Exploration Interface;http://www.vodei.com\n"
     "SWF ADPCM;SWF ADPCM;MediaInfo;A;ADPCM;;ADPCM found in SWF/FLV files;http://www.adobe.com\n"
     "0;Unknown;2CC;A\n"
-    "1;PCM;2CC;A;PCM;;Microsoft PCM;http://www.microsoft.com/windows/\n"
+    "1;PCM (Little unsigned);2CC;A;PCM;;Microsoft PCM;http://www.microsoft.com/windows/\n"
     "2;Microsoft ADPCM;2CC;A;ADPCM;;Microsoft ADPCM;http://www.microsoft.com/windows/\n"
-    "3;FLOAT;2CC;A;;;IEEE FLOAT;http://www.microsoft.com/windows/\n"
+    "3;PCM (Float);2CC;A;PCM;;IEEE FLOAT;http://www.microsoft.com/windows/\n"
     "4;VSELP;2CC;A;;;Compaq VSELP\n"
     "5;CVSD;2CC;A;;;IBM CVSD\n"
-    "6;A-Law;2CC;A;;;CCITT A-Law;http://www.microsoft.com/windows/\n"
-    "7;U-Law;2CC;A;;;CCITT U-Law;http://www.microsoft.com/windows/\n"
+    "6;A-Law;2CC;A;A-Law;;CCITT A-Law;http://www.microsoft.com/windows/\n"
+    "7;U-Law;2CC;A;U-Law;;CCITT U-Law;http://www.microsoft.com/windows/\n"
     "8;DTS;2CC;A;DTS\n"
     "9;DRM;2CC;A;;;Microsoft\n"
     "A;WMSpeech;2CC;A\n"
@@ -2184,7 +2184,7 @@ void File__Base_General (ZtringListList &Info)
     "Mastered_Date;;;Y YT;;;The time that the item was tranfered to a digitalmedium.;;Temporal\n"
     "Recorded_Location;;;Y YT;;;Location where track was recorded. (See COMPOSITION_LOCATION for format);;Spatial\n"
     "Written_Location;;;Y YT;;;Location that the item was originaly designed/written. Information should be stored in the following format: country code, state/province, city where the coutry code is the same 2 octets as in Internet domains, or possibly ISO-3166. e.g. US, Texas, Austin or US, , Austin.;;Spatial\n"
-    "Archival_Location;;;Y YT;;;;;Spatial\n"     
+    "Archival_Location;;;Y YT;;;;;Spatial\n"
     "Encoded_Application;;;Y YT;;;Software. Identifies the name of the software package used to create the file, such as Microsoft WaveEdit.;;Technical\n"
     "Encoded_Application/Url;;;N YT;;;Software. Identifies the name of the software package used to create the file, such as Microsoft WaveEdit.;;Technical\n"
     "Encoded_Library;;;Y YT;;;The software or hardware used to encode this item. e.g. LAME or XviD;;Technical\n"
